# cpp-boilerplate

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
Source/: main.cpp
